# smart-chess

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: CMakeLists.txt  chess-gui.glade
src/: BoardController.cpp  BoardController.h  BoardState.cpp  BoardState.h  BoardView.cpp  BoardView.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  ChessPlayer.cpp  ChessPlayer.h  GRadioColorGroup.cpp  GRadioColorGroup.h  Makefile.am  Makefile.in  SmartChessConfig.h  SmartChessConfig.h.in  SmartChessWindow.cpp  SmartChessWindow.h  Util.cpp  Util.h  a.out  main.cpp
